Fixed squished photos on mobile.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -73,6 +73,7 @@ ul li::before {
 img {
   border: 3px solid #ececec;
   max-width: 100%;
+  height: auto;
 }
 
 figure {
